# python-demos

./: .gitignore  README.md  auto_mpg_demo1.ipynb  configuration.py  data_visualization.md
auto_mpg/: auto_mpg.ipynb  pyproject.toml
auto_mpg/src/: auto_mpg.ipynb
brightness/: brightness.py
core_python/magic_methods/: dbops.py  student_get_set.py  vector_add.py
core_python/var_args/: var_args_demo.ipynb
password-analysis/src/: password-analysis.ipynb
pet_Finder/: env.yaml  train_env.yaml
pet_Finder/src/: loss_functions.ipynb  pawpularity-starter.ipynb  timm_demo.py  timm_train.ipynb
