[tool.poetry]
name = "auto_mpg"
version = "0.1.0"
description = ""
authors = ["djagatiya <divyeshjagatiya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
plotly = "^5.6.0"
nbformat = "^5.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
